@@ -1,9 +1,14 @@
 yoshimi 1.3.x
 
+2016-2-17 Will
+- Instrument file changes are now individually checked after the attempt
+  instead of tested for writability in advance.
+- Path window no longer offers save/not on close - always saves.
+
 2016-2-15 Will
 - Fixed regression. Moved bank and history loading back into config.
   Previous change didn't improve startup behaviour and messed with LV2.
-- Created 'stateChanged' varialble for future use. 
+- Created 'stateChanged' variable for future use. 
 
 2016-2-14 Will
 - Removed jack/alsa tests from CMakeLists.txt It's now redundant.
